# chess

./: .gitignore  CMakeLists.txt
src/: board.c  board.h  constants.h  game.c  game.h  gameplay.c  gameplay.h  gui.c  gui.h  main.c
